# somehal

./: .gitignore  Cargo.toml  README.md  elf2efi.sh  release-plz.toml  release_pie_boot_loader.sh  rust-toolchain.toml  test.sh  test_aarch64.sh  test_aarch64_el2.sh  test_aarch64_el2_uboot.sh  test_aarch64_rt.sh  test_aarch64_uboot.sh  test_aarch64_vm.sh  test_loongarch64.sh  test_riscv64.sh  test_x86.sh  uboot.sh  update_pie_paging.sh  update_pie_uart.sh
.cargo/: config.toml
.github/: check.yml
.github/workflows/: check.yml  deploy.yml  release-plz.yml  release.yml  rust.yml  test.yml
boot-api/: Cargo.toml
boot-api/src/: lib.rs  vec.rs
doc/: design.md
doc/dev_log/: dev_2025-4-7.md
kdef-pgtable/: CHANGELOG.md  Cargo.toml  build.rs
kdef-pgtable/src/: lib.rs
kmem/: Cargo.toml  build.rs  memory.ld
kmem-region/: Cargo.toml  build.rs  memory.ld
kmem-region/src/: align.rs  alloc.rs  lib.rs
kmem-region/src/region/: mod.rs
kmem/src/: addr.rs  align.rs  alloc.rs  lib.rs
kmem/src/ifhal/: mod.rs
kmem/src/paging/: mod.rs
kmem/src/region/: mod.rs
kmem/src/space/: mod.rs
kpercpu/: Cargo.toml
kpercpu-macros/: Cargo.toml
kpercpu-macros/src/: lib.rs
kpercpu/src/: data.rs  lib.rs
loader/pie-boot-loader-aarch64/: CHANGELOG.md  Cargo.toml  build.rs  build.sh  link.ld  rust-toolchain.toml
loader/pie-boot-loader-aarch64/.cargo/: config.toml
loader/pie-boot-loader-aarch64/src/: _macros.rs  cache.rs  console.rs  def.rs  el1.rs  el2.rs  lang_items.rs  lib.rs  main.rs  mmu.rs  ram.rs  relocate.rs  staticcell.rs  trap.rs
loader/pie-boot-loader-aarch64/src/debug/: fdt.rs  mod.rs
loader/pie-boot-loader-aarch64/src/reg/: el1.rs  el2.rs  mod.rs
loader/pie-boot-loader-macros/: CHANGELOG.md  Cargo.toml
loader/pie-boot-loader-macros/src/: lib.rs  print.rs
macros/kasm-aarch64/: CHANGELOG.md  Cargo.toml
macros/kasm-aarch64/src/: lib.rs  trap.rs
macros/pie-boot-macros/: CHANGELOG.md  Cargo.toml
macros/pie-boot-macros/src/: entry.rs  lib.rs
num-align/: Cargo.toml
num-align/src/: lib.rs
page-table-generic/: CHANGELOG.md  Cargo.toml
page-table-generic/src/: addr.rs  align.rs  iter.rs  lib.rs  table.rs
page-table-generic/tests/: test.rs  test_l3.rs
pie-boot/: Cargo.toml  build.rs  pie_boot.ld
pie-boot-if/: CHANGELOG.md  Cargo.toml
pie-boot-if/src/: lib.rs  memregions.rs
pie-boot/src/: api.rs  archif.rs  config.rs  console.rs  early_debug.rs  fdt.rs  lang_items.rs  lib.rs  main.rs  mem.rs  once_static.rs
pie-boot/src/arch/aarch64/: cache.rs  debug.rs  el1.rs  el2.rs  mod.rs
pie-boot/src/arch/aarch64/mmu/: el1.rs  mod.rs
pie-boot/src/arch/riscv64/: boot.rs  context.rs  mmu.rs  mod.rs  trap.rs
pie-boot/src/arch/x86_64/: boot.asm  boot.rs  mmu.rs  mod.rs  multiboot.S  uart16550.rs
pie-boot/src/debug/: fdt.rs  mod.rs
pie-boot/src/paging/: iter.rs  table.rs
platform-test/: Cargo.toml  bare-test.toml  bare-test.toml.bk  build.rs  link_test.ld
platform-test/src/: lang_items.rs  lib.rs
platform-test/tests/: test.rs
some-rt/: Cargo.toml  build.rs  link.ld
some-rt/src/: entry.rs  lib.rs
somehal/: CHANGELOG.md  Cargo.toml  README.md  build.rs  link.ld  link_base.ld
somehal-macros/: Cargo.toml
somehal-macros/src/: entry.rs  lib.rs  print.rs
somehal-macros/src/arch/: aarch64.rs
somehal/src/: _alloc.rs  archif.rs  console.rs  consts.rs  entry.rs  fdt.rs  irq.rs  lazy_static.rs  lib.rs  loader.rs  mp.rs  once_static.rs  power.rs  rust_main.rs  systick.rs  systime.rs  vec.rs
somehal/src/arch/aarch64/: boot.rs  cache.rs  context.rs  debug.rs  el1.rs  el2.rs  entry.rs  mmu.rs  mod.rs  mp.rs  power.rs  psci.rs  trap.rs  vectors.s
somehal/src/arch/aarch64/entry/: el1.rs  el2.rs  mod.rs
somehal/src/arch/aarch64/mem/: mmu.rs  mod.rs
somehal/src/arch/aarch64/paging/: mod.rs  table_el1.rs  table_el2.rs
somehal/src/arch/loongarch64/: addrspace.rs  efi.rs  header.rs  link.ld  mod.rs  power.rs  relocate.rs
somehal/src/arch/loongarch64/mem/: mod.rs
somehal/src/arch/riscv64/: boot.rs  context.rs  entry.rs  mod.rs  trap.rs
somehal/src/arch/riscv64/paging/: mod.rs  table_s.rs
somehal/src/arch/x86_64/: boot.rs  context.rs  debug.rs  entry.rs  idt.rs  link.ld  mod.rs  multiboot.S  multiboot1.rs  trap.rs  uart16550.rs
somehal/src/arch/x86_64/paging/: mod.rs
somehal/src/common/: entry.rs  mod.rs  pe.rs
somehal/src/common/cpu/: mod.rs
somehal/src/common/efi/: err.rs  mod.rs  printk.rs
somehal/src/common/fdt/: mod.rs
somehal/src/common/mem/: mod.rs  phy_alloc.rs  stack.rs
somehal/src/early_debug/: mod.rs
somehal/src/mem/: boot.rs  heap.rs  main_memory.rs  mod.rs  percpu.rs
somehal/src/mem/alloc/: mod.rs
somehal/src/mem/heap/: mod.rs
somehal/src/mem/kpercpu/: mod.rs
somehal/src/mem/page/: boot.rs  mod.rs
somehal/src/mem/percpu/: define.rs  mod.rs
somehal/src/platform/: acpi.rs  fdt.rs  mod.rs
tests/test-some-rt/: .qemu.toml  Cargo.toml  bare-test.toml  build.rs  link_test.ld
tests/test-some-rt/src/: lang_items.rs  lib.rs  mem.rs
tests/test-some-rt/src/debug/: mod.rs
tests/test-some-rt/tests/: test.rs
tool/: check_efi.py
