[workspace]
members = [
    "kmem-region",
    "num-align",
    "page-table-generic",
    "pie-boot",
    "platform-test",
    "somehal",
    "somehal-macros",
]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Some hal for os"
keywords = ["os"]
license = "MIT"
repository = "https://github.com/rcore-os/somehal"


[workspace.dependencies]
