[workspace]
members = [
  "kdef-pgtable",
  "tests/test-some-rt",
  "loader/*",
  "page-table-generic",
  "pie-boot-if",
  "macros/*",
  "somehal",
]
resolver = "3"

[workspace.package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Boot kernel code with mmu."
edition = "2024"
keywords = ["os"]
license = "MIT"
repository = "https://github.com/rcore-os/somehal"
version = "0.1.0"

[workspace.dependencies]
kasm-aarch64 = {path = "macros/kasm-aarch64", version = "0.2"}
kdef-pgtable = {path = "kdef-pgtable", version = "0.1"}
pie-boot-if = {path = "pie-boot-if", version = "0.8.0" }
pie-boot-loader-macros = {path = "loader/pie-boot-loader-macros", version = "0.1"}
pie-boot-macros = {path = "macros/pie-boot-macros", version = "0.1"}
somehal = {path = "somehal", version = "0.4" }
