[package]
name = "kmem-region"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
sv39 = []

[dependencies]
bitflags = "2.9"


[build-dependencies]
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
