[package]
name = "kmem-region"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
sv39 = []
# no high space for paging
space-lo = []
page16k = []

[dependencies]
bitflags = "2.9"


[build-dependencies]
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
