[package]
name = "kmem"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
sv39 = []

[dependencies]
bitflags = "2.9"
link-boot = { version = "0.2" }
page-table-generic = { version = "0.6", path = "../page-table-generic" }


[build-dependencies]
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
