[package]
name = "page-table-generic"
version = "0.6.0"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/rcore-os/somehal/page-table-generic"
documentation = "https://docs.rs/page-table-generic"
edition.workspace = true
description.workspace = true
license.workspace = true
keywords = ["pagetable", "mmu"]
categories = ["no-std"]

[dependencies]
log = "0.4"
thiserror = { version = "2", default-features = false }
link-boot = { version = "0.2" }

[dev-dependencies]
env_logger = "0.11"
tock-registers = "0.9"
