[package]
name = "pie-boot"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
vm = ["kmem-region/space-lo"]
early-debug = ["any-uart"]

[dependencies]
somehal-macros = { path = "../somehal-macros" }
bitflags = "2.9"
kmem-region = { path = "../kmem-region" }
thiserror = { version = "2", default-features = false }
num-align = "0.1"
cfg-if = "1.0.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
any-uart = { version = "0.2", optional = true }
fdt-parser = { version = "0.4" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.13"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
fdt-parser = { version = "0.4" }


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.15"
x2apic = "0.5"
raw-cpuid = "11.3"
multiboot = "0.8"

[build-dependencies]
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
