[package]
name = "platform-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
somehal = { path = "../somehal" }


[[test]]
name = "test"
harness = false
dependencies = ["platform-test"]