[package]
name = "platform-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
somehal = { path = "../somehal" }
linked_list_allocator = "0.10"
spin = "0.10"
log = "0.4"

[[test]]
name = "test"
harness = false
