[package]
name = "some-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
kernel-addr = ["dep:kmem-region"]
early-debug = ["pie-boot/early-debug"]

[dependencies]
pie-boot = { path = "../pie-boot" }
kmem-region = { path = "../kmem-region", optional = true }
