[package]
name = "somehal-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
abi-singleton = "0.3"
darling = "0.20"
rdrive-macro-utils = { version = "0.3.3" }
