[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "somehal"
repository.workspace = true
version = "0.3.3"

[features]
hv = ["kdef-pgtable/space-low"]

[dependencies]
any-uart = {version = "0.2"}
fdt-parser = {version = "0.4"}
heapless = "0.8"
kdef-pgtable = {workspace = true}
log = "0.4"
num-align = "0.1"
page-table-generic = "0.6"
pie-boot-if = {workspace = true}
pie-boot-macros = {workspace = true}
spin = "0.10"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
aarch64-cpu-ext = "0.1"
kasm-aarch64 = {workspace = true}
pie-boot-loader-aarch64 = {path = "../loader/pie-boot-loader-aarch64", version = "0.2" }
smccc = "0.2"

[build-dependencies]
bindeps-simple = {version = "0.2"}
kdef-pgtable = {workspace = true}
