[package]
name = "test-some-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
some-rt = { path = "../../some-rt", features = ["early-debug"] }
log = "0.4"
any-uart = { version = "0.2" }

[[test]]
name = "test"
harness = false
