[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "test-some-rt"
publish = false
repository.workspace = true
version.workspace = true

[features]
hv = ["somehal/hv"]

[dependencies]
any-uart = {version = "0.2"}
log = "0.4"
# pie-boot = {path = "../../pie-boot", version = "0.2"}
somehal = {workspace = true}

[[test]]
harness = false
name = "test"
